2012-07-24  Jan Beulich <jbeulich@suse.com>

	* config/tc-i386-intel.c (i386_intel_simplify_register):
	Replace literal 4 by corresponding ESP_REG_NUM.

2012-07-24  Sandra Loosemore  <sandra@codesourcery.com>
	    Jie Zhang  <jzhang918@gmail.com>

	* config/tc-arm.c (md_apply_fix): Use encoding A2 of ADR
	if offset is negative.

2012-07-16  Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* config/tc-i386.c: Add ADX, RDSEED and PRFCHW asm directives.
	* doc/c-i386.texi: Document the new directives.

2012-07-02  Nick Clifton  <nickc@redhat.com>

	* write.c (fixup_segment): Only perform the subtraction of an
	fx_subsy symbol if MD_APPLY_SYM_VALUE allows it and the symbol is
	properly defined.
	* config/tc-msp430.h (MD_APPLY_SYM_VALUE): Define.

2012-06-30  Alan Modra  <amodra@gmail.com>

	PR gas/14315
	* config/obj-elf.c (obj_elf_weak): Don't set local.

2012-06-30  Johan Olmutz Nielsen  <jnielsen@ddci.com>

	* frags.h (frag_offset_fixed_p): Update prototype.
	* frags.c (frag_offset_fixed_p): Change type of "offset" to offsetT.
	* expr.c (expr, resolve_expression): Likewise for frag_off var.

2012-06-29  Nick Clifton  <nickc@redhat.com>

	PR gas/14263
	* config/tc-arm.c (parse_operands): Initialise val.

2012-06-28  Nick Clifton  <nickc@redhat.com>

	PR gas/14260
	* config/tc-arm.c (encode_arm_addr_mode_common): Generate an error
	message if literal pool addressing is used.

2012-06-28  Nick Clifton  <nickc@redhat.com>

	* dwarf2dbg.c (DWARF2_USE_FIXED_ADVANCE_PC): Enable when using
	linker relaxation.
	(dwarf2_gen_line_info): Generate real, local, labels for line
	numbers.
	(dwarf2dbg_convert_frag): Do not finalize the computation of the
	frag's symbol value when linker relaxation is enabled.
	(ADDR_DELTA_LIMIT): Define.
	(size_fixed_inc_line_addr): Use ADDR_DELTA_LIMIT.
	(emit_fixed_inc_line_addr): Likewise.
	* write.c (fixup_segment): If the subtraction of two symbols
	cannot be resolved but is valid, then prevent bogus range warnings